# ChangeLog for sys-apps/install-xattr
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/install-xattr/ChangeLog,v 1.24 2014/10/13 02:29:36 blueness Exp $

*install-xattr-0.4 (13 Oct 2014)

  13 Oct 2014; Anthony G. Basile <blueness@gentoo.org>
  +install-xattr-0.4.ebuild, install-xattr-9999.ebuild:
  Version bump, fixes bug #523994

  12 Oct 2014; Mikle Kolyada <zlogene@gentoo.org> install-xattr-0.3.ebuild:
  Add ~arm64 and ~m68k keywords

  30 Aug 2014; Anthony G. Basile <blueness@gentoo.org> install-xattr-0.3.ebuild:
  Stable on x86, bug #511984

  19 Aug 2014; Chema Alonso <nimiux@gentoo.org> install-xattr-0.3.ebuild:
  Stable for amd64 wrt bug #511984

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> install-xattr-0.3.ebuild,
  install-xattr-9999.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  01 Aug 2014; Raúl Porcel <armin76@gentoo.org> install-xattr-0.3.ebuild:
  ia64/sparc stable wrt #511984

  27 Jul 2014; Anthony G. Basile <blueness@gentoo.org> install-xattr-0.3.ebuild:
  Stable on arm, ppc and ppc64, bug #511984

  24 Jul 2014; Tobias Klausmann <klausman@gentoo.org> install-xattr-0.3.ebuild:
  Stable on alpha, bug #511984

  24 Jul 2014; Jeroen Roovers <jer@gentoo.org> install-xattr-0.3.ebuild:
  Stable for HPPA (bug #511984).

  23 Jul 2014;  <tgall@gentoo.org> install-xattr-0.3.ebuild:
  arm64 stable, bug #511984

*install-xattr-0.3 (21 Jul 2014)

  21 Jul 2014; Anthony G. Basile <blueness@gentoo.org>
  +install-xattr-0.3.ebuild, -install-xattr-0.1.ebuild,
  -install-xattr-0.2.ebuild:
  Version bump, fixes dst path if src is in a dir

*install-xattr-0.2 (15 Jun 2014)

  15 Jun 2014; Anthony G. Basile <blueness@gentoo.org>
  +install-xattr-0.2.ebuild, install-xattr-9999.ebuild:
  Version bump 0.2, fixes PWD/OLDPWD when being wrapped by __PORTAGE_HELPER_PATH

  31 May 2014; Anthony G. Basile <blueness@gentoo.org>
  install-xattr-9999.ebuild: