@@ -4,24 +4,24 @@ Hash: SHA256
 DIST install-xattr-0.3.tar.bz2 15989 SHA256 667f326887400b3c3142231a2abd89fd0e56107b27c26c6934a9e8ff09c897b3 SHA512 084f6c91a9768887134178a54f8639e6d76e05d81c017383e6d9e6a5ca281b5bfd11bf01276e865e58b9278987dba6139649a6ce701cb06a345a7351d91529c3 WHIRLPOOL d536ae1e36417b3b729ac7cec5656a82432dfbe2c47e1b44246542aa4af3a155c3da4517dd381caa3635a9126502dfdae7786d6d4e7fccfb84fd33a34b4e67fd
 DIST install-xattr-0.4.tar.bz2 16073 SHA256 d769908e738d876bdd35308e3a9555c97872fb8633255e23eaa5a0d68cd10c6f SHA512 f682da111b9803e0ebe3dbc01bf7b921e0c3b12edce3f0f64b9d70e7e8fc84d586bf9612cd2bdc5c49a300cb4bd40b562f218a98e63951f5644d81aeab468361 WHIRLPOOL 719da63f05be2f277a9c968309306df5071d5804473fbd327d85e320ac8b86813face041098bef33723c5ea5aaa4c2862f47fa9accbc4de51638ddb3500354ba
 EBUILD install-xattr-0.3.ebuild 1070 SHA256 6121e353f8bf4c51b2476cdadd39d4371c77304ee74c3d06c9bb6b3e9ad754ae SHA512 32f5cb335585c682afbfe41eeb31ddd556cd12e8c1da5384b2484f424dbd51f398369997e6e2d7157b452cf612e9cad348e08a2e2146efa6b0aaff9be66ad0fd WHIRLPOOL 39c01cc261b3f1253949a73029384a3261a5cae927da78052e9ba60a76c7d38569e5956fd4b4700c64ffadf6d15167dfb7bdcae995865d9be28c78b97a8a8845
-EBUILD install-xattr-0.4.ebuild 1041 SHA256 c5513e6eacfd1d4ac373daacce5fa88d3401483bdd4e3110399acce67193ff03 SHA512 b6ed1f42439f025f768816c58a7489641dedf490697c5a1f94ed8059219c7a22d1530dc04307e649ba480dadd4a8d3f1f33498f58a9c363fac2094d08b10bf5e WHIRLPOOL 1e2fd07cfc8324f4e7b003ef742be6df88894449f0191a3d0ef01f463cc5662d5195e71fb38d2730a2a68f18c864a96574cd70cdfe67a735495259967df523e5
-EBUILD install-xattr-9999.ebuild 1042 SHA256 9063e939c5874fe813fd28d15ef795ebe9a6eb4cf1f3a0258022f136d30a82a0 SHA512 f1877f37360e4163f3e75b66b68d0c54db4d0ecbdadcd76a5cc5cdea8a4e1d662205ba3318b42d7c496fc255b62a0ae04d956d2fa5f6875aab8a92b00510e12c WHIRLPOOL 39fa8c72173855ff664dee93093c1d8f4280ae6cfdb7cb1efc54023a981849ce82041a00cff52e845385426021f8fba38e96b3dc32dc18780a243030425e9d0d
-MISC ChangeLog 3397 SHA256 367f716e388f72f4216a5852f01e8a03099b7f9ce4ed4580cd0fcf42e843a768 SHA512 41b04a7b2e5ac964c8ac6adaaaa813812ab9c4c8d83191abb008f000cc4f4634d36a6bafd225d2d60fe6121dba2aba2da1498dbc88acf78973a1bbefcb4f6920 WHIRLPOOL be5f5b1aaaeeb35c60ca803c8c34f5dd6523e8fb536f9c56642d931caa081689916d5eeaba60a1365c080cd5f2eec2c4db6cf0fa849ce0d24681d1239612f6f1
+EBUILD install-xattr-0.4.ebuild 1055 SHA256 46635a7bbb2aed800d96025e8f50a4b6a0cb2421b357b4eb658a846d40b3f18b SHA512 ab461e1e1ac81409975a57dada9d3ca774c8aee7956b72b1a43b3b5cbe8e689bdc1b3f02499f2192cef48ec9376bbe745d60c3f5179f6b1b9f17cf999bbc6cca WHIRLPOOL 330b0e678a9d5a147fde7e7d094eb0ca84f88e4259ef609ebb8e4f464d35f8194799acebf7b8925bd5df8ec1ab65e16c644d1523ad1eb9321cb8380699f63580
+EBUILD install-xattr-9999.ebuild 1056 SHA256 47a1e3ff80d5133193bb0c575e95d88f390845d3e4789f8ed3f6d888392d7961 SHA512 cdd023a14e92b88bf025f7676401b879220195fac925477396b93da694e061786698b0736faa61a00f6765e0aa6156ff3f2060e3ea7d30d20562939e5ace3ad2 WHIRLPOOL f95ef0589059b2944d0f3301b98f59ba464ff86b0f98bdb9f4f949eff79f7a275400e4e8c8602880563a4ac520fde478a20eed82b507b166eb9beb29a8228810
+MISC ChangeLog 3527 SHA256 1939825c5d9ec9e05b6dc206816d3959005336f6749cfaa5f0ab6ba7af8229e3 SHA512 31f609d19757a4011a4cce7d765fe0f098541abb117ad9d9bd3dccdc228188ea4af40c08d03d96752792295c55add46b82a3ff09cd25b6f49e3d15526d1a7bb4 WHIRLPOOL 8c7433e2b962119717cd51db38e4dd4700ab9c55a83474c289c233f444ca620841ac76beb5a91bc527fe401fd43a4f9a9be770cb7463289c3a2575f4a75aa788
 MISC metadata.xml 259 SHA256 8d59415d1381b227f13535379471b0f7ac3e4ea92e7367d3526aa582a06c7653 SHA512 6f3c1b4ce837dff7b418d16d4c3bb8ea5cd0b44cc6454003748ba2ce545efaf8911ff31692cee96f1195341c000f994275f2401ed2d6bd5ff342caf2607d60f6 WHIRLPOOL 5495217b65b01bc790c422afba1c4766e395a7232a5833c08606885d29db996b2736e61fc85061294b71b8468c65d7efc2679b51170ce53f610613ceffccfead
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUOzlPAAoJEJOE+m71LUu62TkP/02uD81YUBsQ8GqmtAdo+ySB
-GG4ZgqswidqmoyiwAiA9pP0jhvuISysAFDqADMhu4k9m/oOehi+85EZtmW01zav7
-jgTsDbuffmqxEoqr/0qGdl1swme+ozEsBRbhaNxj83g6pjFMfU+rw/EecsVsi8J3
-XilEcZGLoLXbXB9k4Zv3RtKi4MWrSv/Zi5+krVzWBX49wFiBFqOad0JimXy0V4Gu
-oHk+Aw0b9vCbX+d0I/Bv5WXfE16KUb+ZhgZ9VonJ9gnq4a1mt9cgw0OyFQwAe6t3
-m9yq+h77kgkJKUrpq9ja1ZU8LXr1AUhbR/u/t4qVfNsWycwTzUQAB+xwzQo42ZF1
-/I1jSWRIfe2+N4RiA7+S6WSQt2r9CK2WcOTWzXyPGaG74nvQa0Z8qJt9lizxH9Zc
-BT4B/CPBm95Ky/E3Nzq3BaV/qwbBTq7W42/DzQXN7GEHlrlBPsMwaBeTQ3BcTzb3
-Kti4KYeLf69QVvJwaxdrVYP44xkJCtkOR4UdshmNoS8pVxaYt6t1oh0NU88vRzR0
-mFtw43nVNTx5aoUf7MFfjfpT2tcBxc3qAIQ6Au+uzIXwseix3YFEIJ8v/0YVSFW/
-ynzgsA2q2rEUOtSuGdenO8BH0hl39btIK/CS7Xw/q3sR7Zfhzt7rswGuyrTNuKAP
-FVJ1mOi0uuJpVz9paS8j
-=HOBq
+iQIcBAEBCAAGBQJU5IVMAAoJEJOE+m71LUu6uMoQAK7oWXI/kv93ZudT8LbLEzLy
+oJ7AHT7qoX6dBRtgfaYD5VI/FVY2zKRKF/gBSIGd5ulBgm0yq+Exef6NXLaEaBOS
+ZP9rSDLQbbrG4K30qbrZgIEwDSjpWhUNm5lRP9sB42U8+Ap3eMmwiB/Hwl/o9VOf
+IDJR23hkyi9zlDZHSFe0izagv5uMk1oIBK9zJfSwpSwK49G5MVton2tgsLQRsQZ2
+822ro1r4bSWPc59st0j7koOdZt0+XnNDIAIrLFh1SToay8biehHZLgTf6miVcj6Z
+eAMjSbJokZYu0kEtndg1W6JEIL1q5eqaTpdOZO1LkF3iWrKoj/0BCXkSr2pvdOGE
++vN85KJM58BPvQ1p58iPquBrktnZz2OaSh/eqgNENpXwcgP0DobyazY1T2z8Pcgs
+TeX1wqNPhZZ6DvpJHWb8jq2eayzfLA3i+a1qkOdVA/eEGgKDuGCDW9F9cj5OjTtk
+KFuAdjl8Xx3pYRo8sehu5c8jZpdEQYfDqFp2xUn82Vzk6HWOrwJvLX3axxNIiybL
+clRaZqSr7Lmk9pBIFAvFUayKJCrLAdY6UkJPVJQ6h2dwfe1zVEcbKUxT+QuPEop5
+6XYELWozqzYn+hrXbwCMzeW4nNOpSsfZcika23+6i9nNK4GXAOwiQn/CLhCN9ZlF
+GcU/o44mYRtADQOZJhGD
+=m7G9
 -----END PGP SIGNATURE-----
