@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/install-xattr
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/install-xattr/ChangeLog,v 1.24 2014/10/13 02:29:36 blueness Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/install-xattr/ChangeLog,v 1.25 2015/02/18 12:26:22 blueness Exp $
+
+  18 Feb 2015; Anthony G. Basile <blueness@gentoo.org> install-xattr-0.4.ebuild,
+  install-xattr-9999.ebuild:
+  Add some || die.
 
 *install-xattr-0.4 (13 Oct 2014)
 
